Find more code concerns with ErrorProne
Fail the build earlier during compile and before test. Compile-time
errors are faster feedback than run-time errors.

Only Maven for now. Gradle build needs more help.